crates/swc_ecma_parser/tests/test262-error-references/fail/aaa4c4245303bd6d.js.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/test262-parser/fail/aaa4c4245303bd6d.js:1:7
  |
1 | { get 2 }
  |       ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/test262-parser/fail/aaa4c4245303bd6d.js:1:3
  |
1 | { get 2 }
  |   ^^^

